--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css");
+
 body{
-    background-color: rgb(255,255,255);
+    background-color: rgb(255, 255, 255);
 }
